welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:0: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:12: error: not found: value growFlowers
	growFlowers()
        ^FlowerCase:17: error: not found: value faireFleur
	faireFleur(Color.blue)
        ^FlowerCase:22: error: not found: value growFlowers
	growFlowers()
        ^